--- a/templates/index.html
+++ b/templates/index.html
@@ -48,6 +48,9 @@
               <li class="nav-item active">
                 <a class="nav-link" href="{% url 'trash' %}">Trash</a>
               </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="{% url 'logout' %}">LogOut</a>
+              </li>
             
             
           </ul>
@@ -93,9 +96,11 @@
 
                     <div class="card-body">
 
-                        <h5 class="card-title">Subject of the Email</h5>
-                        <p class="card-text">From: sender@example.com</p>
-                        <p class="card-text">Date: September 6, 2023</p>
+                        
+                        <p class="card-text">From: telugusreekanth58@gmail.com</p>
+                        <p class="card-text">Date: April 9, 2024</p>
+                        <h5 class="card-title">Subject of the Email:</h5>
+                        <h4 class="card-title"> Hello sreekanth </h4>
                         <a href="{% url 'inbox' %}" class="btn btn-primary">Read Inbox</a>
                     </div>
                 </div>
